@startuml

[*] --> INIT
INIT --> CLOSED : door in closed position
CLOSED --> OPENING : button_outside/inside pressed
OPENING --> OPEN : sensor_open reached
OPEN --> CLOSING : timeout
CLOSING --> CLOSED : sensor_closed reached
CLOSING --> OPENING : button_outside/inside pressed
CLOSING --> OPENING : Kindskopf

INIT : do / stop motor
ERROR: entry / stop motor
ERROR: do / blink
OPENING: entry / start motor
OPENING: do / run motor
OPENING: exit / stop motor
OPEN: entry / start timer
OPEN: do / check timer
CLOSING: entry / start motor
CLOSING: do / run motor
CLOSING: exit / stop motor


INIT --> ERROR : else

@enduml